             (NullReferenceException error in .NET version)
 * ReSample: fixed KeyError on sample reconstruction
             2001.A.Space.Odyssey.1968.1080p.MULTI.BluRay.x264-1080
             (KeyNotFoundException error in .NET version)
 * pyReScene Auto: DVDx and DISCx subfolders added
 * preprardir.py: bug with copying license file on Linux fixed

pyReScene 0.4 (2013-02-28)
=============

 * pyReScene Auto: Fixing.Frank.2002.DVDRip.XviD-EXViD srr could not create
 * pyReScene Auto: infinite loop on The.Haunting.1963.DVDRip.XviD-FRAGMENT
 * pyReScene Auto: OS X issue fixed
 * pyReScene Auto: more subfolder detection fixes
 * pyReScene Auto: only store proof RAR files when they contain image files
 * ReSample: No sample recreation for MKV files with attachments (bug #2)
 * ReSample: Die.Simpsons.S04E02.....iNTERNAL-UTOPiA
   main AVI file with multiple audio tracks: the sample could not rebuild
 * ReSample: ASAP MP4 sample failed reconstruction
 * ReScene: Reconstruction support for compressed RAR files!
 * ReScene: -t switch to choose your own (empty) temporary directory
 
pyReScene 0.3 (2013-02-07)
=============

 * pyReScene Auto: -l parameter added to report sample issues
 * pyReScene Auto: CD1.srr files were created in certain cases
 * pyReScene Auto: Subservience.2007.BDRip.XviD-DOCUMENT wasn't detected
   as a release
 * pyReScene Auto: -c flag works again
 * pyReScene Auto: FIX-release inside release dir made it fail
 * ReScene: -e output bug for RAR end block fixed

pyReScene 0.2 (2013-02-05)
=============

 * ReScene: OpenSubtitles.org hashes are stored while creating SRR files
 * BUG: reconstructing RARs with old style recovery records works (bug #1)
 * PyPy support: it runs faster than with CPython
 * EXE files for Windows available
 
pyReScene 0.1 (2013-01-14)
=============

pyReScene Auto: (pyrescene.py)
 * Initial version. It can automatically create a complete SRR file.
 * No write access to the release directory is required. This means it works